# exOS-Samples

./: README.md
WaterTank/C API/Binary/WaterTank/Linux/: watertank
WaterTank/C API/Binary/WaterTank/WaterTank_0/: IEC.prg
WaterTank/C API/Source/WaterTank/: Package.pkg  WaterTank.exospkg
WaterTank/C API/Source/WaterTank/Linux/: CMakeLists.txt  Package.pkg  watertank.c
WaterTank/C Interface/Binary/WaterTank/: Package.pkg  WaterTank.exospkg
WaterTank/C Interface/Binary/WaterTank/Linux/: watertank
WaterTank/C Interface/Binary/WaterTank/WaterTank_0/: WaterTank.var
WaterTank/C Interface/Source/WaterTank/: WaterTank.exospkg
WaterTank/C Interface/Source/WaterTank/Linux/: CMakeLists.txt  Package.pkg  build.sh  exos_watertank.c  exos_watertank.h  watertank.c
WaterTank/C Interface/Source/WaterTank/WaterTank/: ANSIC.lby  watertank.c
WaterTank/C++ Class/Binary/WaterTank/Linux/: Package.pkg  watertank
WaterTank/C++ Class/Binary/WaterTank/WaterTank/: Binary.lby  WaterTank.fun
WaterTank/C++ Class/Binary/WaterTank/WaterTank_0/: WaterTank.var
WaterTank/C++ Class/Source/WaterTank/: WaterTank.exospkg
WaterTank/C++ Class/Source/WaterTank/Linux/: CMakeLists.txt  Package.pkg  WaterTankDatamodel.cpp  WaterTankDatamodel.hpp  WaterTankDataset.hpp  WaterTankLogger.hpp  watertank.cpp
WaterTank/C++ Class/Source/WaterTank/WaterTank/: ANSIC.lby  WaterTankDatamodel.cpp  WaterTankDataset.hpp  WaterTankLogger.cpp  watertank.cpp
WaterTank/C++ Class/Source/WaterTank/WaterTank_0/: IEC.prg  WaterTank.st
WaterTank/JavaScript/Binary/WaterTank/: WaterTank.exospkg
WaterTank/JavaScript/Source/WaterTank/: WaterTank.exospkg
WaterTank/JavaScript/Source/WaterTank/Linux/: CMakeLists.txt  Package.pkg  binding.gyp  build.sh  libwatertank.c  package.json
WaterTank/Python/Binary/WaterTank/: WaterTank.exospkg
WaterTank/Python/Binary/WaterTank/Linux/: Package.pkg  (+1 more)
WaterTank/Python/Source/WaterTank/: WaterTank.exospkg
(+18 files in other folders)
